week-4/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: curadocs
  labels:
    environment: production
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    intern-id: ICP-9QGJ27-2026
