week-4/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: curadocs
  labels:
    app: fastapi-app
spec:
  type: ClusterIP # Best practice when using an Ingress Controller
  selector:
    app: fastapi-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http
